@@ -48,12 +48,15 @@ export(	addActions,
 		objSearch,
 		Parse,
 		parseText,
+		pkg,
 		progress,
 		r,
 		rmTemp,
 		sourceClipboard,
 		Sys.tempdir,
 		Sys.userdir,
+		systemFile,
+		systemDir,
 		TempEnv,
 		tempvar,
 		toRjson,
