@@ -1,2 +1,0 @@
-Sys.userdir <- function ()
-	return(tools::file_path_as_absolute("~"))
